--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
     </section>
     <div class="footer">
-        <p>copyright  www.MyonlineMeal.com. All rights reserved</p>
+        <p>copyright ©️ www.MyonlineMeal.com. All rights reserved</p>
     </div>
     
 </body>
